[gd_scene load_steps=4 format=3 uid="uid://dds7y05ciredl"]

[ext_resource type="Script" path="res://src/world/Hookables/BaseHookable/ToPlayerHookable/to_player_hookable.gd" id="1_tn5rx"]

[sub_resource type="TorusMesh" id="TorusMesh_qcvcx"]
outer_radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_hstys"]
radius = 0.75

[node name="ToPlayerHookable" type="Area3D"]
collision_layer = 0
collision_mask = 130
script = ExtResource("1_tn5rx")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_qcvcx")

[node name="DetectionCollider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_hstys")

[node name="FrontCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.796078, 1, 0, 1)
debug_shape_thickness = 5

[node name="BackCast" type="RayCast3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.796078, 1, 0, 1)
debug_shape_thickness = 5

[node name="LeftCast" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.796078, 1, 0, 1)
debug_shape_thickness = 5

[node name="RightCast" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.796078, 1, 0, 1)
debug_shape_thickness = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
